# fred-ball-backend

./: .gitignore  README.md  build.sh  diary_entries.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml  pr.yml
app/: main.py
app/data/: diary_entries.json  entries.py
app/routers/: year.py
app/services/: entries.py  years.py
app/utils/: get_text.py
tests/: test_main.py
