[project]
name = "pdf-to-text"
version = "0.1.0"
description = ""
authors = [
    {name = "lukasb27",email = "lukasball@live.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdf2image (>=1.17.0,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "ftfy (>=6.3.1,<7.0.0)",
    "fastapi[standard] (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.poetry]
packages = [{include = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
