[project]
name = "fred-ball-api"
version = "0.1.0"
description = ""
authors = [
    {name = "lukasb27",email = "lukasball@live.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdf2image (>=1.17.0,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "ftfy (>=6.3.1,<7.0.0)",
    "fastapi[standard] (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "mangum (>=0.19.0,<0.20.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
poetry-plugin-lambda-build = ">=2.1.2"

[tool.poetry-plugin-lambda-build]
docker-image = "public.ecr.aws/sam/build-python3.13:latest-x86_64"
docker-network = "host"
package-artifact-path = "package.zip"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
lint = [
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
